<resources>
    <string name="app_name">My Application</string>

    <string name="title_product">Product</string>
    <string name="title_card">Select Cards</string>
    <string name="title_promotion">Promotion</string>
    <string name="title_store">Store</string>
    <string name="title_history">History</string>
    <string name="cart">Cart</string>

    <!--stamp-->
    <string name="stampcard_description">Stamp Card</string>
    <string name="stamp_earn">Get 1 stamp(s) for any purchase</string>
    <string name="stamp_from_earn">from</string>
    <string name="stamp_valid_until">Valid Until</string>
    <string name="stamp_cash">10.00 USD To 20.00 USD</string>
    <string name="stamp_date">2020 &#8211; 03 &#8211; 26</string>
    <!--End stamp-->

    <string name="description">Description</string>
    <string name="discount_description">Discount</string>
    <string name="apply_now">Apply Now</string>
    <string name="from">From</string>
    <string name="cash">10.00 USD</string>
    <string name="valid_until">Valid Until</string>
    <string name="date">2019 &#8211; 12 &#8211; 31</string>
    <string name="earn_rules">Earn Rules</string>
    <string name="view_more"><a href="#">View More >></a></string>

    <string name="category">Category</string>
    <string name="cate_hot">Hot</string>
    <string name="cate_iced">Iced</string>
    <string name="cate_frappe">Frappe</string>
    <string name="cate_other">Other</string>
    <string name="vembers">VEMBERS</string>

    <string name="title_stamp_card">Stamp Card</string>
    <string name="title_earn_point">Earn Point Card</string>
    <string name="title_discount_card">Discount Card</string>

    <string name="default_qty_value">1</string>
    <string name="add_to_cart_text">Add to cart</string>
    <string name="order_now_text">Order Now</string>
</resources>
