<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="150dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:src="@drawable/reward_card"
                android:layout_margin="16dp"
                android:background="#ccc"
                android:contentDescription="@string/app_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="8dp"
                    android:layout_height="35dp"
                    android:background="@color/colorBrown"
                    android:rotation="180"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/description"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@color/colorGrey"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/earn_point_card"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="65dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="35dp"
                    android:background="@color/colorBrown"
                    android:rotation="180"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/earn_rules"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@color/colorGrey"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get 1 point(s) for any purchase"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_marginStart="55dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valid_until"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnApplyNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_now"
                android:layout_marginTop="45dp"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>