<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/cafe"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ccc"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:gravity="center"
                    android:textColor="#000" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name :"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Iced Latte"
                        android:layout_marginStart="16dp"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:gravity="center"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Category :"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvProductCate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Iced"
                        android:layout_marginStart="16dp"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_marginEnd="16dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Price :"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$2.50"
                        android:layout_marginStart="16dp"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:gravity="center"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Quantity :"
                        android:textSize="14sp"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_marginStart="16dp">

                        <Button
                            android:id="@+id/btnDecrement"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/button_circular_style"
                            android:text="-"
                            android:textSize="30sp"
                            android:backgroundTint="#ccc"
                            android:textColor="#CC000000"/>

                        <TextView
                            android:id="@+id/tvValueOfQty"
                            android:layout_width="55dp"
                            android:layout_height="match_parent"
                            android:text="@string/default_qty_value"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="18sp"/>

                        <Button
                            android:id="@+id/btnIncrement"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:text="+"
                            android:background="@drawable/button_circular_style"
                            android:textSize="30sp"
                            android:backgroundTint="#ccc"
                            android:textColor="#CC000000" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="#ccc"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="16dp">

                <Button
                    android:id="@+id/btnOrderNow"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:text="@string/order_now_text"
                    android:textAllCaps="false"
                    android:background="@drawable/button_buy_now_style_touch_selector"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/btnAddToCart"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_cart_text"
                    android:textAllCaps="false"
                    android:background="@drawable/button_add_to_cart_touch_selector"
                    android:layout_marginTop="8dp"
                    android:paddingStart="65dp"
                    android:paddingEnd="65dp"
                    android:textColor="#fff"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>
